# toynlp

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build_docs.yaml  python-publish.yml  test.yaml
changelog/: index.html
configs/seq2seq/: default.yml
docs/models/: nnlm.md
examples/nnlm/: dataset.ipynb  tokenizer-nnlm.json  tokenizer-wikitext-2-raw-v1-train.json
models/nnlm/: index.html
playground/bert/: data.py
playground/gpt/: data.py
playground/nnlm/: README.md  prepare.ipynb  tokenizer.ipynb
playground/transformer/: architecture.py
search/: search_index.json
tests/: test_attention.py  test_bert.py  test_fasttext.py  test_gpt.py  test_gpt_dataset.py  test_nnlm.py  test_seq2seq.py  test_transformer.py  test_word2vec.py
toynlp/: __init__.py  nnlm.py  paths.py  util.py
toynlp/attention/: config.py  dataset.py  evaluation.py  inference.py  model.py  tokenizer.py  train.py
toynlp/bert/: README.md  config.py  dataset.py  evaluation.py  model.py  tokenizer.py  train.py
toynlp/fasttext/: config.py  dataset.py  evaluation.py  inference.py  model.py  tokenizer.py  train.py
toynlp/gpt/: README.md  arc_rl.py  arc_sft.py  config.py  dataset.py  evaluation.py  inference.py  model.py  sft.py  sft_eval.py  tokenizer.py  train.py
toynlp/nnlm/: README.md  config.py  inference.py  model.py  tokenizer.py  train.py
toynlp/seq2seq/: config.py  dataset.py  evaluation.py  inference.py  model.py  tokenizer.py  train.py
toynlp/transformer/: README.md  config.py  dataset.py  evaluation.py  inference.py  model.py  tokenizer.py  train.py
toynlp/word2vec/: config.py  dataset.py  hub.py  inference.py  model.py  tokenizer.py  train.py
