[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "toynlp"
version = "0.1.0"
description = "A toy NLP library for educational purposes."
authors = [
    {name = "Xiangzhuang Shen", email = "datahonor@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"


classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.10"
dependencies = [
    "datasets>=3.2.0",
    "numpy>=2.2.2",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
    "wandb>=0.19.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ipython",
    "black",
    "flake8",
    "mypy",
    "isort",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "hypothesis>=6.112.0",
    "commitizen",
    "jupyterlab>=4.3.5",
    "ipywidgets>=8.1.5",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocs-bibtex",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.urls]
"Homepage" = "https://shenxiangzhuang.github.io/toynlp"
"Bug Tracker" = "https://shenxiangzhuang.github.io/toynlp/issues"
"Documentation" = "https://shenxiangzhuang.github.io/toynlp"
"Source Code" = "https://github.com/shenxiangzhuang/toynlp"
"Release Notes" = "https://shenxiangzhuang.github.io/toynlp/changelog/"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["toynlp*"]
namespaces = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true


[tool.isort]
profile = "black"

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
